2003-05-13  Paolo Maggi  <paolo.maggi@polito.it>

	Workaround for bug #81893

	* gtksourceview/gtksourceview.c (gtk_source_view_grab_focus): 
	new function

2003-05-13  Michael Terry  <mterry@fastmail.fm>

	* Makefile.am, configure.in, gtksourceview-1.0.pc.in,
	  gtksourceview/Makefile.am, 
	  gtksourceview/gtksourcelanguage-private.h,
	  gtksourceview/gtksourcelanguagesmanager.c,
	  gtksourceview/gtksourcetagtable.c,
	  gtksourceview/gtksourceview-i18n.c, tests/Makefile.am:
	  Removed dependency on libgnome from gtksourceview code.
	* configure.in: Allowed the tests to not be built, via a 
	  --disable-build-tests configure flag.

2003-05-13  Paolo Maggi  <paolo.maggi@polito.it>

	* gtksourceview/language-specs/c.lang: highlight files as vim

	* gtksourceview/language-specs/cpp.lang: re-written

2003-05-12  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourcestylescheme.c
	(gtk_source_style_scheme_get_default): Fix the "dereferencing
	type-punned pointer will break strict-aliasing rules" gcc 3.3
	warning (bug #112680)

2003-05-12  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourcestylescheme.h:
	s/GTK_STYLE_SOURCE_SCHEME/GTK_SOURCE_STYLE_SCHEME/ for
	GtkSourceStyleScheme macros (pointed by Ahmad Baitalmal
	<ahmad@bitbuilder.com>)

2003-05-08  Paolo Maggi  <paolo.maggi@polito.it>

	* gtksourceview/gtksourcebuffer.c
	* gtksourceview/gtksourceview.c: fixed compilation problems 
	with gcc 2.9.x (patch by Mohammed Sameer <Uniball@gmx.net>)

=== gtksourceview 0.2.0 ===
	
2003-05-05  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* configure.in: Bumped version number to 0.2.0 due to the
	directory renaming.

	* NEWS: Updated for new release

2003-05-05  Paolo Maggi  <paolo.maggi@polito.it>

	"src" dir renamed to "gtksourceview", in this way headers 
	can be properly namespaced

=== gtksourceview 0.1.0 ===
	
2003-05-02  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	New GtkSourceView widget by Paolo Maggi and Gustavo Giráldez.
