@@ -2,3 +2,6 @@ Makefile
 Makefile.in
 gtksourceview-marshal.c
 gtksourceview-marshal.h
+gtksourceview-typebuiltins.c
+gtksourceview-typebuiltins.h
+
