@@ -1,3 +1,11 @@
+2003-05-15  Gustavo Giraldez  <gustavo.giraldez@gmx.net>
+
+	* configure.in:
+	* gtksourceview/Makefile.am:
+	* gtksourceview/gtksourcetagstyle.h:
+	Generate gtksourceview-typebuiltins.[ch] with enums and flags from
+	the widget.
+
 2003-05-13  Paolo Maggi  <paolo.maggi@polito.it>
 
 	Workaround for bug #81893
